docs/versioned_docs/version-1.2.2/reference/objects.mdx
<!-- Generated by port_legacy_docs.py v1 from v1.2.2 (9bbad5983b7404468b0061492bc72334988fe6a4). Historical snapshot—do not edit directly. -->

<a id="objects"></a>
# Objects

### ColumnSettings {#objects.ColumnSettings}

**Class**

```python
ColumnSettings(align: Optional[str] = None, is_wrapped: Optional[bool] = None)
```

<div className="api-docstring">

An object that defines the settings for a column in a `Table` block.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `align` | `Optional[str]` | the alignment of the column, one of `left`, `center`, or `right`. |
| `is_wrapped` | `Optional[bool]` | whether the text in the column should be wrapped. |

</div>

### Confirm {#objects.Confirm}

**Class**

```python
Confirm(*args, **kwargs)
```

<div className="api-docstring">

Alias for `ConfirmationDialogue` to retain backwards compatibility.

See:
    [`ConfirmationDialogue`](/v1.2.2/reference/objects/#objects.ConfirmationDialogue).

</div>

### ConfirmationDialogue {#objects.ConfirmationDialogue}

**Class**

```python
ConfirmationDialogue(title: TextLike, text: TextLike, confirm: TextLike, deny: TextLike)
```

<div className="api-docstring">

An object that defines a dialog that provides a confirmation step
to any interactive element. This dialog will ask the user to confirm
their action by offering confirm and deny buttons.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `title` | `TextLike` | the text heading presented at the top of the dialogue box (max 100 chars). |
| `text` | `TextLike` | the text explaining the decision being made by the user through<br />the dialogue box (max 300 chars). |
| `confirm` | `TextLike` | the text inside the confirmation button of the dialogue box (max 30 chars). |
| `deny` | `TextLike` | the text inside the deny button of the dialogue box (max 30 chars). |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if any of the arguments fail to pass validation checks. |

</div>

### ConversationFilter {#objects.ConversationFilter}

**Class**

```python
ConversationFilter(include: Optional[Union[str, List[str]]] = None, exclude_external_shared_channels: Optional[bool] = None, exclude_bot_users: Optional[bool] = None)
```

<div className="api-docstring">

Provides a way to filter the list of options in a conversations select menu or
conversations multi-select menu.

See: [https://api.slack.com/reference/block-kit/composition-objects#filter_conversations](https://api.slack.com/reference/block-kit/composition-objects#filter_conversations).

At least one of the available arguments _must_ be provided.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `include` | `Optional[Union[str, List[str]]]` | Which types of conversations to include in the list.<br />One of more of `im`, `mpim`, `private`, `public`. |
| `exclude_external_shared_channels` | `Optional[bool]` | whether to remove shared public channels<br />from the list. See [https://api.slack.com/enterprise/shared-channels](https://api.slack.com/enterprise/shared-channels). |
| `exclude_bot_users` | `Optional[bool]` | whether to remove bot users from the list of conversations. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageException` | in the event that the user provides none of `include`,<br />`exclude_external_shared_channels`, or `exclude_bot_users` arguments. |

</div>

### DispatchActionConfiguration {#objects.DispatchActionConfiguration}

**Class**

```python
DispatchActionConfiguration(trigger_actions_on: Optional[Union[str, List[str]]] = None)
```

<div className="api-docstring">

Determines when a plain-text input element will return a `block_action`s interaction payload.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `trigger_actions_on` | `Optional[Union[str, List[str]]]` | a list of strings representing interaction types that should return<br />a `block_actions` payload. One or both of `on_enter_pressed`, `on_character_entered`. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if an invalid value is provided amongst the options for<br />`trigger_actions_on`. |

</div>

### InputParameter {#objects.InputParameter}

**Class**

```python
InputParameter(name: str, value: str)
```

<div className="api-docstring">

Contains information about an input parameter.

See [https://api.slack.com/automation/workflows#defining-input-parameters](https://api.slack.com/automation/workflows#defining-input-parameters).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `name` | `str` | the name of the input parameter. |
| `value` | `str` | the value associated with the input parameter. |

</div>

### Option {#objects.Option}

**Class**

```python
Option(text: TextLike, value: str, description: Optional[TextLike] = None, url: Optional[str] = None)
```

<div className="api-docstring">

An object that represents a single selectable item in a select menu, multi-select
menu, checkbox group, radio button group, or overflow menu.

See [https://api.slack.com/reference/block-kit/composition-objects#option](https://api.slack.com/reference/block-kit/composition-objects#option).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `text` | `TextLike` | the text identifying the option (that the user will see). |
| `value` | `str` | the underlying value of that option (not seen by the user). |
| `description` | `Optional[TextLike]` | a more detailed explanation of what the option means (user-facing). |
| `url` | `Optional[str]` | a URL to load in the user's browser when the option is clicked.<br />Only available in `OverflowMenus`. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | when any of the provided arguments fail validation. |

</div>

### OptionGroup {#objects.OptionGroup}

**Class**

```python
OptionGroup(label: TextLike, options: List[Option])
```

<div className="api-docstring">

Provides a way to group options in a select menu or multi-select menu.

See [https://api.slack.com/reference/block-kit/composition-objects#option_group](https://api.slack.com/reference/block-kit/composition-objects#option_group).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `label` | `TextLike` | a label shown above the group of options. |
| `options` | `List[Option]` | a list of `Option` objects that will form the contents of the group (max 100). |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if no options are provided or the label is not valid. |

</div>

### RawText {#objects.RawText}

**Class**

```python
RawText(text: str, emoji: bool = False)
```

<div className="api-docstring">

An object containing some text, formatted as `raw_text` for use in
`Table` blocks.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `text` | `str` | the text to be rendered in a message. |
| `emoji` | `bool` | only usable with `TextType.PLAINTEXT`, if True: emoji will be<br />escaped into text format (e.g. `:smile:`). |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageException` | if the provided `text` fails validation. |

</div>

### SlackFile {#objects.SlackFile}

**Class**

```python
SlackFile(url: Optional[str], id: Optional[str])
```

<div className="api-docstring">

Defines an object containing Slack file information to be used in an image
    block or image element.

This file must be an image and you must provide either the URL or ID (not both).

See: [https://api.slack.com/reference/block-kit/composition-objects#slack_file](https://api.slack.com/reference/block-kit/composition-objects#slack_file).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `url` | `Optional[str]` | the URL can be the `url_private` or the `permalink` of the Slack file<br />(only one of `url` or `id` can be provided). |
| `id` | `Optional[str]` | the Slack ID of the file<br />(only one of `url` or `id` can be provided). |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if both `url` and `id` are provided |

</div>

### Text {#objects.Text}

**Class**

```python
Text(text: str, type_: TextType = TextType.MARKDOWN, emoji: bool = False, verbatim: bool = False)
```

<div className="api-docstring">

An object containing some text, formatted either as `plain_text` or using
Slack's `mrkdwn`.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `text` | `str` | the text to be rendered in a message (max 3000 characters). |
| `type_` | `TextType` | either `TextType.MARKDOWN` or `TextType.PLAINTEXT`. |
| `emoji` | `bool` | only usable with `TextType.PLAINTEXT`, if True: emoji will be<br />escaped into text format (e.g. `:smile:`). |
| `verbatim` | `bool` | only usable with `TextType.MARKDOWN`, if True: links, channel<br />names, user names will not automatically be rendered as links. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageException` | if the provided `text` fails validation. |

</div>

#### to_text staticmethod {#objects.Text.to_text}

```python
to_text(text: Optional[Union[str, Text]], force_plaintext: bool = False, max_length: Optional[int] = None, allow_none: bool = False) -> Optional[Text]
```

Coerces `str` or `Text` objects into `Text` objects.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `text` | `Optional[Union[str, Text]]` | the `str` or `Text` object to ensure is in `Text` format. |
| `force_plaintext` | `bool` | if `True`, forces the `str` or `Text` object<br />into a `Text` object with the type `TextType.PLAINTEXT`. |
| `max_length` | `Optional[int]` | `text` will be checked against this length in addition<br />to the standard `Text` limit of 3000 characters. |
| `allow_none` | `bool` | whether to accept `None` as a valid value for `text`. |

#### to_text_nonnull staticmethod {#objects.Text.to_text_nonnull}

```python
to_text_nonnull(text: Union[str, Text], force_plaintext: bool = False, max_length: Optional[int] = None) -> Text
```

Coerces `str` or `Text` objects into `Text` objects, but does not allow `None` values.

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `text` | `Union[str, Text]` | the `str` or `Text` object to ensure is in `Text` format. |
| `force_plaintext` | `bool` | if `True`, forces the `str` or `Text` object<br />into a `Text` object with the type `TextType.PLAINTEXT`. |
| `max_length` | `Optional[int]` | `text` will be checked against this length in addition<br />to the standard `Text` limit of 3000 characters. |

#### Returns

| Type | Description |
| --- | --- |
| `Text` | A `Text` object created from the input. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | if the text length exceeds the specified max_length. |

### TextType {#objects.TextType}

**Class**

```python

```

<div className="api-docstring">

Allowable types for Slack Text objects.

MARKDOWN: tradional markdown formatting, see
    [https://api.slack.com/reference/surfaces/formatting#basic-formatting](https://api.slack.com/reference/surfaces/formatting#basic-formatting)
PLAINTEXT: simple Unicode text with no formatting (e.g. bold) features.

N.B: some usages of Text objects only allow the `PLAINTEXT` variety.

</div>

### Trigger {#objects.Trigger}

**Class**

```python
Trigger(url: str, customizable_input_parameters: Optional[Union[InputParameter, List[InputParameter]]])
```

<div className="api-docstring">

Contains information about a trigger.

See: [https://api.slack.com/automation/triggers](https://api.slack.com/automation/triggers).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `url` | `str` | a link trigger URL, see<br />[https://api.slack.com/automation/triggers/link](https://api.slack.com/automation/triggers/link) |
| `customizable_input_parameters` | `Optional[Union[InputParameter, List[InputParameter]]]` | a list of `InputParameter` objects<br />which map to those parameters defined on the Workflow in<br />which they are provided. |

<h4>Errors</h4>

| Error | When |
| --- | --- |
| `InvalidUsageError` | when any of the items in<br />`customizable_input_parameters` is not a valid `InputParameter`. |

</div>

### Workflow {#objects.Workflow}

**Class**

```python
Workflow(trigger: Trigger)
```

<div className="api-docstring">

Contains information about a workflow.

See [https://api.slack.com/automation/workflows](https://api.slack.com/automation/workflows).

<h4>Arguments</h4>

| Argument | Type | Description |
| --- | --- | --- |
| `trigger` | `Trigger` | a `Trigger` object that will initiate the workflow. |

</div>
